# halma

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  build_and_deploy_to_lambda.py  create_aws_lambda_function_package.py  default.nix  halma.cabal  halma.hs  project.nix  stack.yaml  telegram-bot.hs  template.yaml
.github/workflows/: main.yml
extra-src/Game/: TurnCounter.hs
extra-src/Game/Halma/: Configuration.hs  State.hs
extra-src/Game/Halma/TelegramBot/: BotM.hs  DrawBoard.hs  I18n.hs  Move.hs  Types.hs
halma/: CHANGELOG.md  LICENSE  halma.cabal  halma.nix
halma-gui/: LICENSE  halma-gui.cabal
halma-gui/src/: Main.hs
halma-gui/src/Game/Halma/GUI/: State.hs
halma-telegram-bot/: AwsLambdaMain.hs  LICENSE  ServerMain.hs  ServerlessMain.hs  halma-telegram-bot.cabal  halma-telegram-bot.nix  lambda-handler.js
halma-telegram-bot/src/: Main.hs
halma-telegram-bot/src/Game/Halma/TelegramBot/: BotM.hs  Cmd.hs  CmdLineOptions.hs  Controller.hs  DrawBoard.hs  I18n.hs  Model.hs  Move.hs  Types.hs  View.hs
halma-telegram-bot/src/Game/Halma/TelegramBot/Controller/: BotM.hs  Helpers.hs  Persistence.hs  SlashCmd.hs  Types.hs
halma-telegram-bot/src/Game/Halma/TelegramBot/Model/: MoveCmd.hs  Types.hs
halma-telegram-bot/src/Game/Halma/TelegramBot/View/: DrawBoard.hs  I18n.hs  Pretty.hs
halma/src/Game/: TurnCounter.hs
halma/src/Game/Halma/: Board.hs  Configuration.hs  Rules.hs
halma/src/Game/Halma/AI/: Base.hs  Competitive.hs  Ignorant.hs
halma/src/Game/Halma/Board/: Draw.hs
halma/test/Game/Halma/Board/: Tests.hs
images/: Generate.hs
nix/: 0001-relax-servant-client-version.patch  envy.nix  haskell-telegram-api.nix  sources.json
rust-halma/: Cargo.toml
rust-halma/src/: lib.rs
src/Game/Halma/: AI.hs  Board.hs  Rules.hs
src/Game/Halma/AI/: Base.hs  Competitive.hs  Ignorant.hs
src/Game/Halma/Board/: Draw.hs
test/: Main.hs
test/Game/Halma/Board/: Tests.hs
test/Game/Halma/Rules/: Tests.hs
