name:                halma
version:             0.1.0.0
synopsis:            Library implementing Halma rules
-- description:         
homepage:            https://github.com/timjb/halma
license:             MIT
license-file:        LICENSE
author:              Tim Baumann
maintainer:          tim@timbaumann.info
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >= 1.10

library
  ghc-options:         -Wall
  exposed-modules:     Game.Halma.Board,
                       Game.Halma.Rules,
                       Game.Halma.Board.Draw
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >= 4.6 && < 5,
                       grid >= 7.6.7 && < 7.7,
                       containers >= 0.5 && < 0.6,
                       diagrams-lib >= 1.2.0.7 && < 1.3,
                       data-default >= 0.4 && < 0.6
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-suite tests
  Ghc-options:         -Wall
  Hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  default-language:    Haskell2010
  Build-depends:       halma,
                       grid,
                       HUnit,
                       QuickCheck,
                       base,
                       containers,
                       test-framework >= 0.6 && < 0.9,
                       test-framework-hunit >= 0.3.0 && < 0.4,
                       test-framework-quickcheck2 >= 0.3.0 && < 0.4
