name: halma-telegram-bot
version: 0.1.0.0
synopsis: Telegram bot for playing Halma
description: Play Halma (aka Chinese Checkers) in Telegram against your friends or an AI
homepage: https://github.com/timjb/halma
license: MIT
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
copyright: 2016 Tim Baumann
category: Game
build-type: Simple
cabal-version: >= 1.22

source-repository head
  type: git
  location: https://github.com/timjb/halma.git

Executable halma-telegram-bot
  Ghc-options: -threaded -Wall
  default-language: Haskell2010
  Hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Game.Halma.TelegramBot.BotM
    Game.Halma.TelegramBot.Cmd
    Game.Halma.TelegramBot.DrawBoard
    Game.Halma.TelegramBot.I18n
    Game.Halma.TelegramBot.Move
    Game.Halma.TelegramBot.Types
  build-depends:
    halma,
    base >= 4.6 && < 5,
    telegram-api >= 0.4.1.0 && < 0.5,
    text,
    transformers,
    servant-client,
    http-client,
    http-client-tls,
    data-default,
    megaparsec,
    mtl,
    exceptions,
    temporary,
    diagrams-lib,
    diagrams-cairo,
    directory,
    semigroups,
    containers,
    aeson