name: halma-telegram-bot
version: 0.1.0.0
synopsis: Telegram bot for playing Halma
description: Play Halma (aka Chinese Checkers) in Telegram against your friends or an AI
homepage: https://github.com/timjb/halma
license: MIT
license-file: LICENSE
author: Tim Baumann
maintainer: tim@timbaumann.info
copyright: 2016-2018 Tim Baumann
category: Game
build-type: Simple
cabal-version: >= 1.22

source-repository head
  type: git
  location: https://github.com/timjb/halma.git

library
  Ghc-options: -Wall -Werror
  default-language: Haskell2010
  Hs-source-dirs: src
  exposed-modules:
    Game.Halma.TelegramBot.CmdLineOptions
    Game.Halma.TelegramBot.Controller
    Game.Halma.TelegramBot.Controller.BotM
    Game.Halma.TelegramBot.Controller.Helpers
    Game.Halma.TelegramBot.Controller.Persistence
    Game.Halma.TelegramBot.Controller.SlashCmd
    Game.Halma.TelegramBot.Controller.Types
    Game.Halma.TelegramBot.Model
    Game.Halma.TelegramBot.Model.MoveCmd
    Game.Halma.TelegramBot.Model.Types
    Game.Halma.TelegramBot.View
    Game.Halma.TelegramBot.View.DrawBoard
    Game.Halma.TelegramBot.View.I18n
    Game.Halma.TelegramBot.View.Pretty
  build-depends:
    base >= 4.6 && < 5,
    halma >= 0.3.0.0 && < 0.4,
    telegram-api >= 0.7.2 && < 0.8,
    text,
    transformers,
    servant-client,
    http-client,
    http-client-tls,
    data-default,
    megaparsec,
    mtl,
    exceptions,
    temporary,
    diagrams-lib,
    diagrams-rasterific,
    directory,
    semigroups,
    containers,
    aeson,
    aeson-pretty,
    optparse-applicative,
    filepath,
    bytestring,
    vector

Executable halma-telegram-bot-server
  Ghc-options: -threaded -Wall -Werror
  default-language: Haskell2010
  Hs-source-dirs: .
  main-is: ServerMain.hs
  build-depends:
    base,
    halma-telegram-bot,
    optparse-applicative,
    http-client,
    http-client-tls

Executable halma-telegram-bot-serverless
  Ghc-options: -threaded -Wall -Werror
  default-language: Haskell2010
  Hs-source-dirs: .
  main-is: ServerlessMain.hs
  build-depends:
    base,
    halma-telegram-bot,
    aeson,
    amazonka,
    amazonka-core,
    amazonka-s3,
    bytestring,
    conduit-extra,
    http-client,
    http-client-tls,
    lens,
    resourcet,
    telegram-api,
    text